--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,14 @@
+
+.dark {
+  background-color: #222;
+  color: #fff;
+}
+
+.light {
+  background-color: #fff;
+  color: #333;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -23,11 +34,13 @@ h1{
   text-align: center;
 }
 
-nav{
+nav {
   display: flex;
-  width: 80vw;
-  justify-content: flex-start;
+  justify-content: space-between; 
+  align-items: center; 
   padding: 1rem;
+  text-transform: uppercase;
+  font-weight: bold;
 }
 
 a{
@@ -113,10 +126,11 @@ tr:nth-child(even) {
   background-color: #dddddd;
 }
 
-.dark{
-  background-color: #12121296;
-  color: white;
-}
-.dark > a {
-  color: white;
+.button{
+  border-radius: 10px; 
+  padding: 15px 32px;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+
 }
